--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -6,15 +6,23 @@ on:
 jobs:
   run-snowflake-query:
     runs-on: ubuntu-latest
-    environment: Demo
+    environment: Demo  # Ensure your GitHub environment is exactly named "Demo"
 
     steps:
-    - name: Install Snowflake CLI
+    - name: Install Snowflake CLI using Action
       id: install_sf
       uses: Snowflake-Labs/snowflake-cli-action@v1.5
       with:
         cli-version: "latest"
         default-config-file-path: ".snowflake/config.toml"
+
+    - name: Debug Show install-dir output
+      run: |
+        echo "Install dir is: '${{ steps.install_sf.outputs.install-dir }}'"
+
+    - name: Debug List install-dir contents
+      run: |
+        ls -l "${{ steps.install_sf.outputs.install-dir }}"
 
     - name: Add sf CLI to PATH
       run: echo "${{ steps.install_sf.outputs.install-dir }}" >> $GITHUB_PATH
@@ -33,13 +41,38 @@ jobs:
         schema = "${{ secrets.DEMO_SNOWFLAKE_SCHEMA }}"
         EOF
 
-    - name: Debug Show install path
-      run: | 
-        echo "Installed at: ${{ steps.install_sf.outputs.install-dir }}"
+    - name: Confirm sf is in PATH
+      run: which sf || echo "sf command NOT found in PATH"
 
+    - name: Run SQL query using Snowflake CLI (try with sf)
+      run: |
+        sf -c demo query "CREATE OR REPLACE TABLE demo_employees (
+          id INT,
+          name STRING,
+          role STRING,
+          start_date DATE,
+          salary NUMBER(10,2)
+        );"
+      continue-on-error: true
 
+    - name: Run SQL query using Snowflake CLI (absolute path fallback)
+      if: failure()
+      run: |
+        "${{ steps.install_sf.outputs.install-dir }}/sf" -c demo query "CREATE OR REPLACE TABLE demo_employees (
+          id INT,
+          name STRING,
+          role STRING,
+          start_date DATE,
+          salary NUMBER(10,2)
+        );"
 
-    - name: Run SQL query using Snowflake CLI
+    - name: Fallback manual install Snowflake CLI via pip
+      if: failure()
+      run: |
+        python3 -m pip install --upgrade snowflake-cli
+
+    - name: Run SQL query using manually installed CLI (fallback)
+      if: failure()
       run: |
         sf -c demo query "CREATE OR REPLACE TABLE demo_employees (
           id INT,
