--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -9,16 +9,14 @@ jobs:
     environment: Demo  
 
     steps:
-    - name: Install Snowflake CLI using Action
-      id: install_sf
-      uses: Snowflake-Labs/snowflake-cli-action@v1.5
-      with:
-        cli-version: "latest"
-        default-config-file-path: ".snowflake/config.toml"
+    - name: Install Snowflake CLI manually via pip
+      run: |
+        python3 -m pip install --upgrade snowflake-cli
 
 
-    - name: Add sf CLI to PATH
-      run: echo "${{ steps.install_sf.outputs.install-dir }}" >> $GITHUB_PATH
+
+    # - name: Add sf CLI to PATH
+    #   run: echo "${{ steps.install_sf.outputs.install-dir }}" >> $GITHUB_PATH
 
     - name: Set up Snowflake config.toml
       run: |
