--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -20,28 +20,7 @@ jobs:
       run: |
         echo "/opt/pipx_bin/snow_pipx_path" >> $GITHUB_PATH
 
-    - name: Debug sf CLI availability
-      run: |
-        echo "Current PATH: $PATH"
-        if command -v sf >/dev/null 2>&1; then
-          echo "sf found at: $(which sf)"
-          sf --version
-        else
-          echo "sf command NOT found"
-        fi
-        echo "Contents of pipx binary directory:"
-        ls -l /opt/pipx_bin/snow_pipx_path || echo "Directory not found"
-
-
-
-    # - name: Check Snowflake CLI version
-    #   run: sf --version
-
-
-
-
-    # - name: Add sf CLI to PATH
-    #   run: echo "${{ steps.install_sf.outputs.install-dir }}" >> $GITHUB_PATH
+  
 
     - name: Set up Snowflake config.toml
       run: |
@@ -61,7 +40,7 @@ jobs:
 
     - name: Run SQL query using Snowflake CLI (try with sf)
       run: |
-        sf -c demo query "CREATE OR REPLACE TABLE demo_employees (
+        snow -c demo query "CREATE OR REPLACE TABLE demo_employees (
           id INT,
           name STRING,
           role STRING,
