--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -40,11 +40,11 @@ jobs:
 
     - name: Run SQL query using Snowflake CLI (try with sf)
       run: |
-        snow -c demo query "CREATE OR REPLACE TABLE demo_employees (
+         snow query --name demo --sql "CREATE OR REPLACE TABLE demo_employees (
           id INT,
           name STRING,
           role STRING,
           start_date DATE,
           salary NUMBER(10,2)
-        );"
+          );"
       
