--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -38,13 +38,17 @@ jobs:
 
    
 
-    - name: Run SQL query using Snowflake CLI (try with sf)
+    - name: Run SQL using Snowflake CLI v3
       run: |
-        snow sql --name demo --query "CREATE OR REPLACE TABLE demo_employees (
-        id INT,
-        name STRING,
-        role STRING,
-        start_date DATE,
-        salary NUMBER(10,2)
-        );"
+        snow sql \
+          --config-file .snowflake/config.toml \
+          --connection demo \
+          --query "CREATE OR REPLACE TABLE demo_employees (
+            id INT,
+            name STRING,
+            role STRING,
+            start_date DATE,
+            salary NUMBER(10,2)
+          );"
+
       
