--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -46,7 +46,7 @@ jobs:
     
     - name: Run SQL using Snowflake CLI v3
       env: 
-        SNOWFLAKE_CONFIG_FILE: .snowflake/config.toml
+        SNOWFLAKE_CONFIG_FILE: ${{ github.workspace }}/.snowflake/config.toml
       run: |
         snow sql \
           --connection demo \
