--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -49,7 +49,7 @@ jobs:
         SNOWFLAKE_CONFIG_FILE: ${{ github.workspace }}/.snowflake/config.toml
       run: |
         snow sql \
-          --connection demo \
+          --connection demo
           --query "CREATE OR REPLACE TABLE demo_employees (
             id INT,
             name STRING,
