--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -48,8 +48,8 @@ jobs:
       env: 
         SNOWFLAKE_CONFIG_FILE: ${{ github.workspace }}/.snowflake/config.toml
       run: |
-        snow sql \
-          --connection demo
+        snow sql /
+          --connection demo /
           --query "CREATE OR REPLACE TABLE demo_employees (
             id INT,
             name STRING,
