--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -21,6 +21,7 @@ jobs:
         [connections.demo]
         account = "RHMDJPI-XY35622"
         user = "SANDEEP39642"
+        password = "Welcome@23071995"
         authenticator = "externalbrowser"
         role = "ACCOUNTADMIN"
         warehouse = "SNOWFLAKE_LEARNING_WH"
