--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -19,13 +19,13 @@ jobs:
         mkdir -p ~/.snowflake
         cat > ~/.snowflake/config.toml <<EOF
         [connections.demo]
-        account = "RHMDJPI-XY35622"
-        user = "SANDEEP39642"
-        password = "Welcome@23071995"
-        role = "ACCOUNTADMIN"
-        warehouse = "SNOWFLAKE_LEARNING_WH"
-        database = "SNOWFLAKE_LEARNING_DB"
-        schema = "SNOWFLAKEDEMOSCHEMA"
+        account = "${{ secrets.SNOWFLAKE_ACCOUNT }}"
+        username = "${{ secrets.SNOWFLAKE_USER }}"
+        password = "${{ secrets.SNOWFLAKE_PASSWORD }}"
+        role = "${{ secrets.SNOWFLAKE_ROLE }}"
+        warehouse = "${{ secrets.SNOWFLAKE_WAREHOUSE }}"
+        database = "${{ secrets.SNOWFLAKE_DATABASE }}"
+        schema = "${{ secrets.SNOWFLAKE_SCHEMA }}"
         EOF
            chmod 600 ~/.snowflake/config.toml
 
