--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -22,7 +22,7 @@ jobs:
         [connections.my_example_connection]
         account = "RHMDJPI-XY35622"
         user = "SANDEEP39642"
-        password = "${{ secrets.SNOWFLAKE_PASSWORD }}"
+        password = "Welcome@23071995"
         role = "ACCOUNTADMIN"
         warehouse = "SNOWFLAKE_LEARNING_WH"
         database = "SNOWFLAKE_LEARNING_DB"
