--- a/.github/workflows/snowflakedemo.yml
+++ b/.github/workflows/snowflakedemo.yml
@@ -8,7 +8,7 @@ jobs:
   run-snowflake-query:
     runs-on: ubuntu-latest
     env:
-      SQL_FILE_PATH: ${{ github.workspace }}/scripts/init_table.sql
+      SQL_FILE_PATH: scripts/init_table.sql
     environment: Demo
     
 
